--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </mask>
                     <g mask="url(#mask0)">
                         <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                        <image class="home_blob-img" x="50" y="10" href="assests/img/tharun1.png"/>
+                        <image class="home_blob-img" x="50" y="10" href="assets/img/tharun1.png"/>
                     </g>
                 </svg>
             </div>
@@ -75,7 +75,7 @@
             <h2 class="section-title">About</h2>
             <div class="about_container grid">
                 <div class="about_img">
-                    <img src="assests/img/about.jpg" alt="">
+                    <img src="assets/img/about.jpg" alt="">
                 </div>
 
                 <div>
@@ -172,7 +172,7 @@
                 </div>
 
                 <div>
-                    <img src="assests/img/icons.svg" alt="icons.svg" class="skills_img">
+                    <img src="assets/img/icons.svg" alt="icons.svg" class="skills_img">
                 </div>
             </div>
         </section>
@@ -182,17 +182,17 @@
 
             <div class="project_container grid">
                 <a href="" class="project_img">
-                    <img src="assests/img/work2.jpg" alt="">
+                    <img src="assets/img/work2.jpg" alt="">
                     <h4 class="home_title-color shine-effect"> 1. Indian Language Learning ChatBot</h4>
                     <h4 class="project_des">Description:<br><li> Can able to translate 21 Indian languages.</li><li> Rapid Performance.</li></h4>
                 </a>
                 <a href="" class="project_img">
-                    <img src="assests/img/work3.jpg" alt="">
+                    <img src="assets/img/work3.jpg" alt="">
                     <h4 class="home_title-color shine-effect">2. Backpain Detection using Machine Learning</h4>
                     <h4 class="project_des">Description:<br><li>Helps to detect what kind of Backpain</li><li>Good Performance.</li></h4>
                 </a>
                 <a href="" class="project_img">
-                    <img src="assests/img/work4.jpg" alt="">
+                    <img src="assets/img/work4.jpg" alt="">
                     <h4 class="home_title-color shine-effect">3. Portfolio Website</h4>
                     <h4 class="project_des">Description:<br><li>Profesional Portfolio.</li><li>Nice Design.</li></h4>
                 </a>
