Added meta data in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Tharun's Portfolio</title>
+    <title>Tharun's Portfolio | Tharun R | Portfolio | VIT Vellore</title>
+    <meta name="description" content="Portfolio website of Tharun R - Computer Science student at VIT Vellore. View resume, projects, certifications, and more.">
+    <meta name="keywords" content="Tharun R, Portfolio, Resume, VIT Vellore, Developer, Projects, tharun website">
+    <meta name="author" content="Tharun R">
+    <meta name="robots" content="index, follow">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Tharun R",
+      "url": "https://tharunR-17.github.io",
+      "sameAs": [
+        "https://github.com/tharunR-17",
+        "https://www.linkedin.com/in/tharun-r-a7bba7271/"
+      ],
+      "alumniOf": "VIT Vellore",
+      "jobTitle": "Computer Science Student"
+    }
+    </script>
 </head>
 <body>
     <header class="header">
