Updated index.html with favicon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="assests/img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="assests/img/favicon.png" type="image/png">
     <title>Tharun's Portfolio | Tharun R | Portfolio | VIT Vellore</title>
     <meta name="description" content="Portfolio website of Tharun R - Computer Science student at VIT Vellore. View resume, projects, certifications, and more.">
     <meta name="keywords" content="Tharun R, Portfolio, Resume, VIT Vellore, Developer, Projects, tharun website">
