Updated index.html with hyperlinks

--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 
                 <a href="#contact" class="button">Contact</a>
                 <!--<div class="home_social">
-                    <a href="" class="home_social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home_social-icon"><i class='bx bxl-github'></i></a>
-                    <a href="" class="home_social-icon"><i class='bx bxl-twitter'></i></a>
+                    <a href="https://www.linkedin.com/in/tharun-r-a7bba7271" class="home_social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/tharunR-17" class="home_social-icon"><i class='bx bxl-github'></i></a>
+                    <a href="https://x.com/tharunravi10" class="home_social-icon"><i class='bx bxl-twitter'></i></a>
                 </div>-->
             </div>
 
             <div class="home_social">
-                <a href="" class="home_social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="" class="home_social-icon"><i class='bx bxl-github'></i></a>
-                <a href="" class="home_social-icon"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/tharun-r-a7bba7271" class="home_social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/tharunR-17" class="home_social-icon"><i class='bx bxl-github'></i></a>
+                <a href="https://x.com/tharunravi10" class="home_social-icon"><i class='bx bxl-twitter'></i></a>
             </div>
             <div class="home_img">
                 <svg class="home_blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -237,7 +237,7 @@
         <div class="footer_social">
             <a href="#" class="footer_icon"><i class='bx bxl-facebook' ></i></a>
             <a href="#" class="footer_icon"><i class='bx bxl-instagram' ></i></a>
-            <a href="#" class="footer_icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://x.com/tharunravi10" class="footer_icon"><i class='bx bxl-twitter' ></i></a>
         </div>
         <p class="footer_copy">&#169; 2025. Tharun R. All Rights Reserved.</p>
     </footer>
